--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
+    "fsevents": "^2.1.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.10.2",
     "react-scripts": "2.1.5"
   },
   "scripts": {
@@ -22,8 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "jest-dom": "^3.1.2",
-    "react-testing-library": "^6.1.2"
-  }
+  "devDependencies": {}
 }
